# InventoryManager

./: README.md
data/: Passwords.txt
final-project-project-group-6-master/: CMakeLists.txt  README.md
final-project-project-group-6-master/data/: productTests.json  products.json  users.json
final-project-project-group-6-master/include/: Cart.h  Login.h
final-project-project-group-6-master/src/: Cart.cpp  FileManager.cpp  products.cpp
final-project-project-group-6-master/tests/: CMakeLists.txt
include/: FileManager.h  Inventory.h  ProductFactory.h  UIManager.h  products.h
src/: Inventory.cpp  Login.cpp  UIManager.cpp  main.cpp
tests/: test.cpp
